# oxc

./: Cargo.toml
crates/oxc/: Cargo.toml
crates/oxc_allocator/: Cargo.toml
crates/oxc_allocator/src/: arena.rs  bincode.rs  lib.rs  rkyv.rs
crates/oxc_ast/: Cargo.toml
crates/oxc_ast/src/: ast_builder.rs  lib.rs  rkyv.rs
crates/oxc_ast/src/ast/: js.rs  jsx.rs  literal.rs  ts.rs
crates/oxc_linter/src/rules/eslint/: no_loss_of_precision.rs
crates/oxc_linter/src/rules/unicorn/: no_zero_fractions.rs  number_literal_case.rs  numeric_separators_style.rs
crates/oxc_minifier/src/compressor/: fold.rs
crates/oxc_parser/: Cargo.toml
crates/oxc_parser/src/: lib.rs
crates/oxc_parser/src/lexer/: byte_handlers.rs  comment.rs  identifier.rs  jsx.rs  mod.rs  numeric.rs  punctuation.rs  regex.rs  search.rs  string.rs  template.rs  typescript.rs  unicode.rs  whitespace.rs
crates/oxc_prettier/src/format/: mod.rs
crates/oxc_semantic/: Cargo.toml
crates/oxc_semantic/src/: reference.rs  scope.rs
crates/oxc_semantic/src/checker/: javascript.rs
crates/oxc_span/: Cargo.toml
crates/oxc_span/src/: atom.rs  source_type.rs  span.rs
crates/oxc_syntax/: Cargo.toml
crates/oxc_syntax/src/: lib.rs  node.rs  operator.rs  reference.rs  scope.rs  symbol.rs
crates/oxc_transformer/src/typescript/: enum.rs
tasks/benchmark/: Cargo.toml
tasks/benchmark/benches/: lexer.rs
