[package]
name                   = "oxc_span"
version                = "0.12.5"
publish                = true
authors.workspace      = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
categories.workspace   = true

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
miette        = { workspace = true }
compact_str   = { workspace = true }
bincode       = { workspace = true, optional = true, features = ["derive", "compact_str"] }
oxc_allocator = { workspace = true, optional = true }
simdutf8      = { workspace = true, optional = true }

tsify        = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
serde        = { workspace = true, features = ["derive"], optional = true }

[features]
default   = []
serialize = ["dep:serde", "dep:tsify", "dep:wasm-bindgen", "compact_str/serde"]
bincode   = ["dep:bincode", "dep:oxc_allocator", "dep:simdutf8"]
